# soothsayer

./: .cursorrules  .env.example  .gitignore  .vercelignore  AGENTS.md  Anchor.toml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  M6_REFACTOR.md  PHASE_7_RESULTS.md  PHASE_8.md  README.md  STATUS.md  VALIDATION_BACKLOG.md  deny.toml  package-lock.json  package.json  pyproject.toml  tsconfig.json  vercel.json
.cargo/: config.toml
.claude/: settings.json
crates/soothsayer-consumer/: Cargo.toml
crates/soothsayer-consumer/src/: lib.rs
crates/soothsayer-core/: Cargo.toml
crates/soothsayer-core/src/: asset.rs  error.rs  lib.rs  observation.rs
crates/soothsayer-demo-kamino/: Cargo.toml
crates/soothsayer-demo-kamino/src/: lib.rs
crates/soothsayer-ingest/: Cargo.toml
crates/soothsayer-ingest/src/: lib.rs
crates/soothsayer-ingest/src/chainlink/: mod.rs  v10.rs
crates/soothsayer-ingest/src/rpc/: limiter.rs  mod.rs  retry.rs
crates/soothsayer-oracle/: Cargo.toml
crates/soothsayer-oracle/src/: config.rs  error.rs  lib.rs  oracle.rs  surface.rs  types.rs
crates/soothsayer-publisher/: Cargo.toml
crates/soothsayer-publisher/src/: main.rs  payload.rs
crates/soothsayer-router/: Cargo.toml
crates/soothsayer-router/src/: lib.rs  receipt.rs
docs/: INTEGRATION.md  ROADMAP.md  VOICE.md  bot_kamino_xstocks_liquidator.md  data-sources.md  devnet-quickstart.md  grant_application_tldr.md  grant_solana_oev_band_edge.md  methodology_scope.md  outreach_grant_letters_of_support.md  pitch_deck_content.md  plan-b.md  product-spec.md  product-stack.md  protocol_semantics_kamino_xstocks.md  scryer_consumer_guide.md  v1.5-deployment-spec.md  v2.md  v5-tape.md
docs/offline-guide/: README.md
docs/sources/: INDEX.md  _template.md
idl/kamino/: klend.json  scope.json
landing/: dashboard-narrative.html  dashboard.html  demo_kamino_fragment.html  index.html  kamino_xstocks_weekend_fragment.html  live.html  pitch.html
landing/data/: calibration_curve.json  chainlink_comparator.json  comparator_weekends.json  leave_one_out.json  narrative_headline.json  per_symbol.json  per_target_oos.json  pyth_comparator.json  summary.json  walkforward.json  window_sensitivity.json
launchd/: com.adamnoonan.soothsayer.forward-tape.plist
notebooks/: V1_chainlink_weekend_bias.ipynb  V2_ms_half_life.ipynb
notebooks/archived-v1-methodology/: README.md  V3_funding_signal.ipynb  V4_hawkes_toxicity.ipynb
ops/launchd/: com.soothsayer.lending-publisher.plist
programs/mock-chainlink-verifier-program/: Cargo.toml
programs/mock-chainlink-verifier-program/src/: lib.rs
programs/soothsayer-band-amm-cli/: Cargo.toml
programs/soothsayer-band-amm-cli/src/: anchor.rs  artefact.rs  main.rs  oracle_ix.rs  pool_ix.rs
programs/soothsayer-band-amm-program/: Cargo.toml
programs/soothsayer-band-amm-program/.cargo/: config.toml
programs/soothsayer-band-amm-program/src/: errors.rs  lib.rs  lp_math.rs  state.rs  swap_math.rs
programs/soothsayer-band-amm-program/tests/: integration.rs
programs/soothsayer-lending-publisher/: Cargo.toml
programs/soothsayer-lending-publisher/src/: anchor.rs  main.rs
programs/soothsayer-oracle-program/: Cargo.toml
programs/soothsayer-oracle-program/src/: errors.rs  lib.rs  state.rs
programs/soothsayer-router-program/: Cargo.toml
programs/soothsayer-router-program/src/: chainlink_v11.rs  errors.rs  filters.rs  lib.rs  regime.rs  soothsayer_band.rs  state.rs  upstreams.rs
programs/soothsayer-streams-relay-program/: Cargo.toml
programs/soothsayer-streams-relay-program/src/: errors.rs  lib.rs  state.rs
reports/: INDEX.md  backed_corp_actions_enriched.md  backed_corp_actions_summary.md  band_edge_oev_analysis.md  band_edge_oev_oos_counterfactual.md  band_edge_oev_tau_sweep.md  bear_case.md  demo_kamino_comparison.md  kamino_liquidations_first_scan.md  kamino_xstocks_weekend_20260417.md  kamino_xstocks_weekend_20260424.md  kamino_xstocks_weekend_20260501.md  kamino_xstocks_weekend_20260515.md  kamino_xstocks_weekend_20260710.md  kamino_xstocks_weekend_20260717.md  m6_forward_tape_0weekends.md  m6_forward_tape_10weekends.md  m6_forward_tape_10weekends_variants.md  m6_forward_tape_11weekends.md  m6_forward_tape_11weekends_variants.md  m6_forward_tape_1weekends.md  m6_forward_tape_1weekends_variants.md  m6_forward_tape_2weekends.md  m6_forward_tape_2weekends_variants.md  m6_forward_tape_3weekends.md  m6_forward_tape_3weekends_variants.md  m6_forward_tape_5weekends.md  m6_forward_tape_5weekends_variants.md  m6_forward_tape_8weekends.md  m6_forward_tape_9weekends_variants.md  m6_sigma_ewma.md  m6_simulation_study.md  m6_validation.md  methodology_history.md  option_c_spec.md  paper2_liquidation_policy_plan.md  phase1_week1.md  phase1_week2.md  v11_cadence_verification.md  v1_chainlink_bias.md  (+36 more)
reports/active/: INDEX.md  aft_carve_plan.md  draft_overnight_paper1_integration.md  m6_refactor.md  (+15 more)
scripts/: _compose_kamino_rollup_message.py  aggregate_ab_comparison.py  aggregate_ab_matched.py  aggregate_m5_m6_bootstrap.py  analyze_v1.py  build_case_study_boj_m6.py  build_dashboard_data.py  build_fig_h1.py  build_fig_h2.py  build_fig_h3.py  build_fig_h4.py  build_fig_h5.py  build_fig_s1.py  build_fig_s2.py  build_fred_macro_calendar.py  build_lwc_artefact.py  build_m6b2_lending_artefact.py  build_mondrian_artefact.py  build_overnight_artefact.py  build_overnight_panel.py  build_paper1_figures.py  chainlink_implicit_band_analysis.py  check_chainlink_weekend.py  check_forward_partitions.py  check_scryer_freshness.py  collect_forward_tape.py  collect_kamino_scope_tape.py  collect_pyth_xstock_tape.py  compute_competitor_oracle_analytics.py  debug_v10_layout.py  deploy_devnet.sh  dump_v11_feed_inventory.py  enumerate_v11_xstock_feeds.py  exp_caviar_cv_select.py  exp_caviar_tail.py  exp_evt_pot_tail.py  exp_har_rv_tail.py  exp_hawkes_pot.py  exp_mondrian_conformal.py  exp_pooled_tail.py  (+107 more)
tests/: integration.ts  integration_relay.ts  integration_router.ts  test_bot_mvp.py  test_oracle_competitor_registry.py  test_path_fitted_score.py  test_protocol_compare.py  test_scryer_loaders.py
(+194 files in other folders)
