[workspace]
members = [
    "crates/soothsayer-core",
    "crates/soothsayer-ingest",
    "crates/soothsayer-oracle",
    "crates/soothsayer-consumer",
    "crates/soothsayer-publisher",
    "crates/soothsayer-demo-kamino",
]
# Exclude the Anchor program — it's built via `anchor build` with its own
# BPF/SBF toolchain, lives in `programs/`, and has its own Cargo context.
# Including it here fights with host-side crates over `getrandom` features, etc.
exclude = ["programs/soothsayer-oracle-program"]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/ACNoonan/soothsayer"

[workspace.dependencies]
thiserror = "2"
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
base64 = "0.22"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
polars = { version = "0.46", default-features = false, features = ["parquet", "csv", "dtype-date", "temporal", "timezones"] }
clap = { version = "4", features = ["derive"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
