[workspace]
# soothsayer-ingest was removed in the April 2026 scryer cutover.
# All upstream data fetching now lives in the sibling `scryer` repo;
# soothsayer reads scryer parquet. See CLAUDE.md hard rule #1 and
# the 2026-04-27 entry in reports/methodology_history.md.
members = [
    "crates/soothsayer-core",
    "crates/soothsayer-oracle",
    "crates/soothsayer-consumer",
    "crates/soothsayer-publisher",
    "crates/soothsayer-demo-kamino",
    "crates/soothsayer-router",
]
# Exclude the Anchor programs — they're built via `anchor build` with their own
# BPF/SBF toolchain, live in `programs/`, and have their own Cargo context.
# Including them here fights with host-side crates over `getrandom` features, etc.
exclude = [
    "programs/soothsayer-oracle-program",
    "programs/soothsayer-router-program",
    "programs/soothsayer-streams-relay-program",
    "programs/mock-chainlink-verifier-program",
    "programs/soothsayer-band-amm-program",
    "programs/soothsayer-band-amm-cli",
]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/ACNoonan/soothsayer"

[workspace.dependencies]
thiserror = "2"
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
base64 = "0.22"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
polars = { version = "0.46", default-features = false, features = ["parquet", "csv", "dtype-date", "temporal", "timezones"] }
clap = { version = "4", features = ["derive"] }

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"
unused_must_use = "deny"

[workspace.lints.clippy]
# Correctness / clear-cut bugs — deny.
or_fun_call = "deny"
redundant_clone = "deny"
assigning_clones = "deny"
collection_is_never_read = "deny"
to_string_in_format_args = "deny"
mutex_atomic = "deny"
# Performance smells — start at warn so adoption isn't a wall of errors.
naive_bytecount = "warn"
stable_sort_primitive = "warn"
large_types_passed_by_value = "warn"
large_futures = "warn"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
overflow-checks = true
