[project]
name = "soothsayer"
version = "0.0.0"
description = "Solana Fair Value Oracle — Phase 0 validation workspace"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.13",
    "statsmodels>=0.14",
    "yfinance>=0.2.50",
    "requests>=2.32",
    "solders>=0.23",
    "base58>=2.1",
    "python-dotenv>=1.0",
    "pyarrow>=16.0",
    "tqdm>=4.66",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "jupyter>=1.1",
    "ipykernel>=6.29",
    "anchorpy>=0.20",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/soothsayer"]

[tool.ruff]
line-length = 100
target-version = "py312"
