[package]
name = "soothsayer-demo-kamino"
description = "Reference Kamino-fork lending logic consuming a Soothsayer PriceBand. Demonstrates the Week 3 pitch one-liner: 'Kamino's band is a governance parameter — Soothsayer's band is an empirical measurement.' Not a production lending implementation; exists to show the integration surface and let a pitch reviewer trace what changes when the same LTV formula reads a calibrated band vs a flat haircut."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
soothsayer-consumer = { path = "../soothsayer-consumer" }
thiserror.workspace = true

# Binary-only deps for the run_demo CLI; lib path stays minimal.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "run_demo"
path = "src/bin/run_demo.rs"
