[package]
name = "soothsayer-demo-kamino"
description = "Reference Kamino-fork lending logic consuming a Soothsayer PriceBand. A teaching artifact that contrasts a calibrated band with a legacy flat-haircut baseline under a Kamino-like LTV ladder. Not a production lending implementation; exists to show the integration surface and let a reviewer trace what changes when the same LTV formula reads a calibrated band versus a stylized flat-band comparator."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
soothsayer-consumer = { path = "../soothsayer-consumer" }
thiserror.workspace = true

# Binary-only deps for the run_demo CLI; lib path stays minimal.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "run_demo"
path = "src/bin/run_demo.rs"

[lints]
workspace = true
