[package]
name = "soothsayer-ingest"
description = "Async data-source ingest for soothsayer — Chainlink decoder, Helius RPC client, Kraken perps, Yahoo, Solana DEX swap extraction."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
soothsayer-core = { path = "../soothsayer-core" }
thiserror.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
hex.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
