[package]
name = "soothsayer-band-amm-program"
description = "Soothsayer BandAMM. Single-active-range oracle-aware AMM whose quoted range tracks the calibrated band published by soothsayer-oracle-program. Inside-band swaps charge a flat fee; outside-band swaps incur a width-scaled surcharge that accrues to LPs. Every swap emits a receipt event reconcilable against the on-chain PriceUpdate at publish_slot. Colosseum hackathon MVP, devnet-only."
version = "0.0.0"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/ACNoonan/soothsayer"

[lib]
crate-type = ["cdylib", "lib"]
name = "soothsayer_band_amm_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31", features = ["init-if-needed"] }
anchor-spl = { version = "0.31", features = ["token"] }
soothsayer-consumer = { path = "../../crates/soothsayer-consumer", default-features = false }

[dev-dependencies]
# Integration tests run via solana-program-test in BPF mode (`prefer_bpf(true)`).
# `tests/fixtures/soothsayer_band_amm_program.so` is a symlink to
# `target/deploy/soothsayer_band_amm_program.so`, discoverable via the
# `SBF_OUT_DIR` env var set in `.cargo/config.toml`. Run `cargo build-sbf`
# before `cargo test --test integration`. Versions track the toolchain
# bundled with anchor 0.31.
solana-program-test = "2.2"
solana-sdk = "2.2"
spl-token = { version = "7", features = ["no-entrypoint"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
bincode = "1"
base64 = "0.22"
