[package]
name = "soothsayer-lending-publisher"
description = "Production daemon for the Lending-track on-chain publish path. Shells out to the in-workspace `soothsayer prepare-publish` for band computation, then signs + submits the on-chain `publish` IX. Standalone manifest (excluded from the workspace) so the solana-sdk dep tree stays out of the BPF build."
version = "0.0.0"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/ACNoonan/soothsayer"

[[bin]]
name = "soothsayer-lending-publisher"
path = "src/main.rs"

# Host-side only (mirrors the band-amm-cli exclusion). Anchor IXs are
# wire-encoded by hand (8-byte discriminator + borsh args) instead of
# importing the program crates — keeps the dep tree small and dodges
# anchor-lang's BPF feature gnarliness when host-compiled.
[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
clap = { version = "4", features = ["derive"] }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
solana-client = "2.2"
solana-sdk = "2.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints.rust]
unsafe_op_in_unsafe_fn = "warn"
unused_must_use = "deny"

[lints.clippy]
or_fun_call = "deny"
redundant_clone = "deny"

# Standalone manifest — sibling Anchor programs are excluded from the
# workspace at /Users/adamnoonan/Documents/soothsayer/Cargo.toml, and so is
# this host CLI.
[workspace]
